2014-03-07 Konrad Bucheli <kb@open.ch>

	* Initial version